# CUE4Parse

./: .gitignore  .gitmodules  CUE4Parse.sln  CUE4Parse.slnx  Directory.Build.props  Directory.Packages.props  NOTICE  README.md
.github/workflows/: nuget_push.yml
CUE4Parse/: CUE4Parse.csproj  CUE4ParseLog.cs  Defines.md  Globals.cs  JsonConverters.cs
CUE4Parse-Conversion/: AnimConverter.cs  CUE4Parse-Conversion.csproj  Constants.cs  ExportResult.cs  ExportSession.cs  ExporterOptions.cs  Globals.cs  IExporter.cs  StreamingLevelFilterArgs.cs
CUE4Parse-Conversion/ActorX/: ActorXUtils.cs  VChunkHeader.cs  VJointPosPsk.cs
CUE4Parse-Conversion/Animations/: Anim.cs  AnimConverter.cs  AnimExporter.cs  EAnimFormat.cs
CUE4Parse-Conversion/Animations/PSA/: ActorXAnim.cs  AnimInfoBinary.cs  CAnimSequence.cs  CAnimSet.cs  CAnimTrack.cs  FAnimationRuntime.cs  FCompactPose.cs  FNamedBoneBinary.cs  FPoseBone.cs  VQuatAnimKey.cs  VScaleAnimKey.cs
CUE4Parse-Conversion/Animations/UEFormat/: FAnimKey.cs  FFloatKey.cs  FQuatKey.cs  FVectorKey.cs  UEAnim.cs
CUE4Parse-Conversion/DNA/: DNAExporter.cs
CUE4Parse-Conversion/Dto/: ActorDto.cs  ActorStreamingDto.cs  AnimationDto.cs  AnimationSequenceDto.cs  AnimationTrackDto.cs  ComponentDto.cs  LandscapeDataAccess.cs  MeshBoneDto.cs  MeshBoneInfluenceDto.cs  MeshDto.cs  MeshLodDto.LandscapeMesh.cs  MeshLodDto.NaniteClusters.cs  MeshLodDto.SkeletalMesh.cs  MeshLodDto.StaticMesh.cs  MeshLodDto.cs  MeshMaterialDto.cs  MeshSectionDto.cs  MeshVertex.cs  MeshVertexColorDto.cs  ObjectDto.cs  WorldDto.cs  WorldParseContext.cs
CUE4Parse-Conversion/Exporters/: AnimationExporter.cs  DnaExporter.cs  ExporterBase.cs  JsonPropertiesExporter.cs  LandscapeMeshExporter.cs  MaterialExporter.cs  MeshExporter.cs  PoseAssetExporter.cs  RawDataExporter.cs  SkeletalMeshExporter.cs  SkeletonExporter.cs  SplineMeshExporter.cs  StaticMeshExporter.cs  TextureExporter.cs  WorldExporter.cs
CUE4Parse-Conversion/Formats/: IExportFormat.cs
CUE4Parse-Conversion/Formats/Animations/: ActorXAnimFormat.cs  IAnimExportFormat.cs  UEFormatAnimFormat.cs  UsdAnimFormat.cs
CUE4Parse-Conversion/Formats/Materials/: IMaterialExportFormat.cs  JsonMaterialFormat.cs  UsdMaterialFormat.cs
CUE4Parse-Conversion/Formats/Meshes/: ActorXMeshFormat.cs  GltfMeshFormat.cs  (+3 more)
CUE4Parse-Conversion/Landscape/: LandscapeDataAccess.cs  LandscapeExporter.cs
CUE4Parse-Conversion/Legacy/: AnimConverter.cs  MeshConverter.cs  PoseAssetConverter.cs
CUE4Parse-Conversion/Materials/: EMaterialFormat.cs  MaterialExporter.cs  MaterialExporter2.cs
CUE4Parse-Conversion/Meshes/: ELodFormat.cs  EMeshFormat.cs  ESocketFormat.cs  Garbage.cs  Gltf.cs  Mesh.cs  MeshConverter.cs  MeshExporter.cs  MeshIOApi.cs  StaticMeshExport.cs
CUE4Parse-Conversion/Mutable/: MutableConverter.cs  MutableExporter.cs
CUE4Parse-Conversion/Options/: ELandscapeFlags.cs  EMeshFormat.cs  EMeshQuality.cs  ENaniteMeshFormat.cs  ESocketFormat.cs  ETextureFormat.cs  ExportOptions.cs
CUE4Parse-Conversion/PoseAsset/: EPoseFormat.cs  PoseAsset.cs  PoseAssetConverter.cs  PoseAssetExporter.cs
CUE4Parse-Conversion/Sounds/: Decoder.cs  MidiExporter.cs  SoundDecoder.cs
CUE4Parse-Conversion/Textures/: CTexture.cs  CubemapConverter.cs  Decoder.cs  ETextureFormat.cs  FormatHelper.cs  PlatformDecoders.cs  PlatformDeswizzlers.cs  TextureDecoder.cs  TextureEncoder.cs  TextureNativeLibrary.cs
CUE4Parse-Conversion/UEFormat/: ISerializable.cs  UEFormatExport.cs  UEFormatExtensions.cs
CUE4Parse-Conversion/USD/: Usd.cs  UsdExtensions.cs  UsdaWriter.cs
CUE4Parse-Conversion/V2/: ExportResult.cs  ExportSession.cs  IExporter.cs
CUE4Parse-Conversion/World/: EWorldFormat.cs
CUE4Parse-Conversion/Writers/: ELandscapeExportFlags.cs
CUE4Parse-Fortnite/: CUE4Parse-Fortnite.csproj
CUE4Parse-Fortnite/Enums/: EFortRarity.cs
CUE4Parse-Natives/: .gitignore  ACL.h  ACLConvert.h  ACLDecompress.h  CMakeLists.txt  CUE4Parse-Natives.vcxproj  Features.cpp  Framework.h  wrappers.h
CUE4Parse-Natives/ACL/: ACL.cpp  CMakeLists.txt
CUE4Parse-Natives/ACL/includes/: ACLDecompress.h  ACLFramework.h  Framework.h
CUE4Parse-Natives/CMakeModules/: FindFBX.cmake
CUE4Parse-Natives/FBX/: FBXIOStream.h  FBXWrapper.cpp
CUE4Parse-Natives/Oodle/: CMakeLists.txt  Oodle.cpp
CUE4Parse-Natives/common/: Framework.h  MeshIO.h  Structs.h
CUE4Parse.Example/: CUE4Parse.Example.csproj  Exporter.cs  Exporter2.cs  Program.cs  Unpacker.cs
CUE4Parse.Tests/: BlueprintDecompilerTests.cs  CUE4Parse.Tests.csproj  DuplicateClassesTest.cs  FixPathTests.cs  Shared.cs  SourceContextTest.cs
CUE4Parse/ACL/: ACLException.cs  ACLNative.cs  CompressedHeaders.cs  CompressedTracks.cs  DecompressionContext.cs  InterpolationUtils.cs
CUE4Parse/Compression/: Compression.cs  CompressionMethod.cs  LZ4.cs  Oodle.cs  OodleHelper.cs  OodleTextureHelper.cs  ZlibHelper.cs
CUE4Parse/FileProvider/: AbstractFileProvider.cs  ApkFileProvider.cs  DefaultFileProvider.cs  EmscriptenDataFileProvider.cs  FileProvider.cs  GameFile.cs  IFileProvider.cs  InternationalizationDictionary.cs  OsGameFile.cs  StreamedFileProvider.cs  VersionedFileProvider.cs
CUE4Parse/GTA/: GMaterialTextureInfo.cs  GScalarParameterValue.cs  GTextureParameterValue.cs
CUE4Parse/MappingsProvider/: AbstractTypeMappingsProvider.cs  BenBotMappingsProvider.cs  FileUsmapTypeMappingsProvider.cs  ITypeMappingsProvider.cs  JmapParser.cs  JmapTypeMappingsProvider.cs  JsonTypeMappingsProvider.cs  MappingsSchema.cs  RepoTypeMappingsProvider.cs  TypeMappings.cs  UsmapTypeMappingsProvider.cs
CUE4Parse/Resources/: BL4SoundTagsMap.json  PUBGNameHashMap.json  ShaderHashedNames.json
CUE4Parse/UE4/: IUClass.cs  IUStruct.cs  UnrealBaseTypes.cs
CUE4Parse/Utils/: AlignUtils.cs  ArrayUtils.cs  CRC32.cs  CUE4Parse-Natives.cs  CUE4ParseNatives.cs  CityHash.cs  CustomStringBuilder.cs  DictUtils.cs  EnumUtils.cs  HexUtils.cs  HttpUtils.cs  KismetUtils.cs  ListUtils.cs  MathUtils.cs  SegmentFileStream.cs  SevenZipUtils.cs  StringComparerUtils.cs  StringUtils.cs  TensorUtils.cs  TypeConversionUtils.cs  UnsafePrint.cs
TestOld/: TestOld.csproj
(+2608 files in other folders)
